Release notes for Version 1.26 (June 2018 -- June 2019)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
- New functions/commands GPIO (Raspberry)
- fixed bug in virtual-machine/compiler (RasPi, signed char)
- new shortcut compiler start ybasic
- fbxbasic included 
- added broadcast permission for UDP sockets
- new syntax highlighting file for nano/pico
- new commandline function --quitonend
- bugfix in FOR (compiler) and better error handling

Release notes for Version 1.27 (June 2019 -- )
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
- removed VERSION and VERSION_DATE from library
- new function REGEXP() and MATCH()
- little fix for HELP, REM and DATA