@@ -14,3 +14,4 @@ Release notes for Version 1.27 (June 2019 -- )
 - removed VERSION and VERSION_DATE from library
 - new function REGEXP() and MATCH()
 - little fix for HELP, REM and DATA
+- New feature: ANS variable (store result of simple calculation)
